--- a/settings.rc
+++ b/settings.rc
@@ -58,14 +58,16 @@ FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LTEXT           "&Memory logic:",IDC_STATIC,7,10,49,8
     COMBOBOX        IDC_MEM,58,8,143,80,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "RAM size:",IDC_STATIC,13,29,36,8
-    CONTROL         "&128K",IDC_RAM128,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,58,29,31,9
-    CONTROL         "&256K",IDC_RAM256,"Button",BS_AUTORADIOBUTTON,92,29,31,9
-    CONTROL         "&512K",IDC_RAM512,"Button",BS_AUTORADIOBUTTON,128,29,31,9
-    CONTROL         "1&024K",IDC_RAM1024,"Button",BS_AUTORADIOBUTTON,164,29,33,9
-    GROUPBOX        "",IDC_STATIC,7,20,194,21
-    CONTROL         "&Single file ROM image",IDC_SINGLE_ROM,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,47,86,9
-    CONTROL         "Custom &ROMSET",IDC_CUSTOM_ROM,"Button",BS_AUTORADIOBUTTON,14,76,69,9
+    GROUPBOX        "",IDC_STATIC,7,20,194,21,WS_GROUP
+    LTEXT           "RAM size:",IDC_STATIC,9,29,36,8
+    CONTROL         "&128K",IDC_RAM128,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,42,29,31,9
+    CONTROL         "&256K",IDC_RAM256,"Button",BS_AUTORADIOBUTTON,72,29,31,9
+    CONTROL         "&512K",IDC_RAM512,"Button",BS_AUTORADIOBUTTON,102,29,31,9
+    CONTROL         "1&024K",IDC_RAM1024,"Button",BS_AUTORADIOBUTTON,131,29,33,9
+    CONTROL         "&4096K",IDC_RAM4096,"Button",BS_AUTORADIOBUTTON,164,29,33,9
+    GROUPBOX        "",IDC_STATIC,7,40,194,66,WS_GROUP
+    CONTROL         "&Single file ROM image",IDC_SINGLE_ROM,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,14,47,86,9
+    CONTROL         "Custom &ROMSET",IDC_CUSTOM_ROM,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,14,76,69,9
     RTEXT           "Loaded ROM size: 64K",IDC_TOTAL_ROM,106,48,87,8,NOT WS_VISIBLE
     EDITTEXT        IDE_BIGROM,14,58,164,13,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "",IDC_FILEBANK,"msctls_updown32",UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,163,54,11,13
@@ -76,20 +78,19 @@ BEGIN
     CONTROL         "Spin2",IDC_FILEPAGE,"msctls_updown32",UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,164,86,11,13
     PUSHBUTTON      "...",IDB_ROMSEL_P,181,89,14,12
     LTEXT           "Cache size:",IDC_STATIC,7,110,40,8
-    CONTROL         "&none",IDC_CACHE0,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,55,110,29,9
+    CONTROL         "&none",IDC_CACHE0,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,55,110,29,9
     CONTROL         "1&6K",IDC_CACHE16,"Button",BS_AUTORADIOBUTTON,90,110,26,9
     CONTROL         "32&K",IDC_CACHE32,"Button",BS_AUTORADIOBUTTON,120,110,25,9
-    GROUPBOX        "",IDC_STATIC,7,40,194,66
     LTEXT           "CMOS chip:",IDC_STATIC,7,122,40,8
-    CONTROL         "n&one",IDC_CMOS_NONE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,55,122,29,9
+    CONTROL         "n&one",IDC_CMOS_NONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,55,122,29,9
     CONTROL         "&DALLAS",IDC_CMOS_DALLAS,"Button",BS_AUTORADIOBUTTON,90,122,41,9
     CONTROL         "512&Bu1",IDC_CMOS_RUS,"Button",BS_AUTORADIOBUTTON,138,122,38,9
     CONTROL         "SM&UC NVRAM + CMOS RTC",IDC_SMUC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,133,115,10
 END
 
-IDD_ULA DIALOG  0, 0, 180, 132
+IDD_ULA DIALOGEX 0, 0, 180, 150
 STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_BORDER
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     LTEXT           "Loa&d Preset",IDC_STATIC,7,9,45,8
     COMBOBOX        IDC_ULAPRESET,62,7,111,74,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -108,9 +109,10 @@ BEGIN
     EDITTEXT        IDE_INT,133,64,40,12,ES_AUTOHSCROLL
     LTEXT           "in&t len",IDC_STATIC,107,79,21,8
     EDITTEXT        IDE_INT_LEN,133,77,40,12,ES_AUTOHSCROLL
-    GROUPBOX        "ATM options",IDC_STATIC,7,92,166,33
-    CONTROL         "&Swap A5-A7, A8-A10 on ATM RG0",IDC_ATM_SWAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,102,127,10
-    CONTROL         "Use ATM p&alette",IDC_ATMPAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,113,69,10
+    CONTROL         "&Swap A5-A7, A8-A10 on ATM RG0",IDC_ATM_SWAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,115,127,10
+    CONTROL         "Use p&alette",IDC_ATMPAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,102,52,10
+    CONTROL         "Profi &monochrome",IDC_PROFI_MONOCHROME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,73,10
+    CONTROL         "Port &FF",IDC_PORT_FF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,89,39,10
 END
 
 IDD_LEDS DIALOG  0, 0, 188, 146
@@ -595,7 +597,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 173
         TOPMARGIN, 7
-        BOTTOMMARGIN, 125
+        BOTTOMMARGIN, 143
     END
 
     IDD_LEDS, DIALOG
