--- a/x32/quorum.ini
+++ b/x32/quorum.ini
@@ -11,7 +11,7 @@ ShareCPU=1      ; 1 - only for fast CPUs (incompatible with SoundDrv=none)
 HighPriority=1  ; boost process priority, disabled on ShareCPU=0
 ;
 ; high memory: PENTAGON, SCORPION, PROFSCORP, PROFI, ATM450, ATM710, ATM3, KAY, PLUS3, QUORUM
-HIMEM=PENTAGON
+HIMEM=QUORUM
 ; memory size, KB. pentagon,atm2: 128/256/512/1024, scorp,kay: 256/1024,
 ; ATM450: 512/1024, profi: 1024 only, quorum: 128/1024
 RAMSize=1024
@@ -20,7 +20,7 @@ TapeTraps=1
 ; start tape on ROM load routine
 TapeAutoStart=1
 ; cmos on DFF7/BFF7: none, DALLAS (pc chip), or 512Bu1 (russian chip)
-CMOS=none
+CMOS=512Bu1
 ; cache size: 16,32 or 0 - disabled. no effect for ATM-4.50 model
 Cache=0
 ; bits, that can't be updated by Z80 and cleared by RESET (decimal value)
@@ -62,10 +62,10 @@ diskD=
 
 [INPUT]
 ; default/bk08/quorum
-ZXKeyMap=default
+ZXKeyMap=quorum
 ; you can define own layout, naming section in this INI file [ZX.KEYS.myname]
 ; create layouts for xas/storm/zxasm/alasm/zxword/sts/etc yourself, i'm bored
-KeybLayout=default
+KeybLayout=quorum
 KeybPCMode=0    ; when enabled, using pc defaults, ex: SHIFT+7 => &
 Mouse=KEMPSTON  ; mouse type: NONE/KEMPSTON/AY
 Wheel=KEMPSTON  ; mouse wheel: NONE/KEMPSTON/KEYBOARD
@@ -73,7 +73,7 @@ JoyMouse=0      ; emulate kempston joystick on mouse
 MouseScale=0    ; logarithmic scale: ZX_mouse=PC_mouse*2^(Scale), valid: [-3;3]
 SwapMouse=0     ; swap left and right mouse buttons
 KJoystick=1     ; emulate kempston joystick on keyboard and/or gameport
-Matrix=1        ; emulate keymatrix effect
+Matrix=0        ; emulate keymatrix effect
 Fire=KFIRE      ; autofire key -> kempston
 FireRate=1      ; autofire button up/down delay (INTs)
 AltLock=1       ; does not update ZX-SPECTRUM keyboard while ALT pressed
@@ -422,7 +422,7 @@ QUORUM=qu7v42.rom
 
 ; you can create own 64K-ROMSET, naming ini section [ROM.my_own_set]
 ; for empty ROMSET, single-file large ROM used (accordingly to memory model)
-ROMSET=PENTAGON
+ROMSET=
 
 [ROM.default]
 title=Separate ROMs set
@@ -579,20 +579,20 @@ RAR=rar e -y "%s"
 
 main.exit=ALT F4           ; why do this?
 main.lockmouse=MMB         ; read kempston mouse in windowed mode
-main.monitor=ESC           ; for hackers only
-main.selectfilter=F4       ; select video filter
+main.monitor=SHIFT ESC           ; for hackers only
+main.selectfilter=ALT 4       ; select video filter
 main.selectdriver=SHIFT F4 ; select video driver for some filters
 main.fullscreen=ALT ENTER  ; toggle full-screen on/off
 main.pause=PAUSE           ; pause
-main.selectfix=GRMUL       ; select video parameter
-main.selectsnd=ALT GRMUL   ; select soundchip parameter or palette
+main.selectfix=ALT GRMUL       ; select video parameter
+main.selectsnd=SHIFT GRMUL   ; select soundchip parameter or palette
 main.incfix=SHIFT GRADD    ; fine tuneup
 main.decfix=SHIFT GRSUB    ; fine tuneup
-main.incfix10=GRADD        ; tuneup
-main.decfix10=GRSUB        ; tuneup
-main.leds=GRDIV            ; leds on/off
+main.incfix10=ALT GRADD        ; tuneup
+main.decfix10=ALT GRSUB        ; tuneup
+main.leds=ALT GRDIV            ; leds on/off
 main.maxspeed=NUMLOCK      ; max speed on/off
-main.pokedialog=F6         ; enter poke(s)
+main.pokedialog=ALT 6         ; enter poke(s)
 main.starttape=F7          ; start/stop tape
 main.tapebrowser=SHIFT F7  ; tape browser
 main.screenshot=ALT F8     ; screenshot
@@ -604,14 +604,14 @@ main.reset48=ALT SHIFT F12 ; reset to basic 48 with locked 128k memory
 main.resetbasic=SHIFT F12  ; reset to basic 48 with unlocked 128k memory
 main.resetdos=CONTROL F12  ; reset to TR-DOS
 main.resetcache=ALT CONTROL F12    ; reset to cache
-main.nmi=ALT SHIFT F11     ; NMI without ROM switching
+main.nmi=F11               ; NMI without ROM switching
 main.nmidos=CONTROL F11    ; TR-DOS magic
 main.nmicache=ALT F11      ; NMI in cache
-main.help=F1               ; show keys
+main.help=ALT 1               ; show keys
 main.settings=Alt F1       ; emulation settings (GUI)
-main.save=F2               ; save disk/snapshot
-main.load=F3               ; load disk/tape/snapshot
-main.savesound=F5          ; save WAV/VTX
+main.save=ALT 2               ; save disk/snapshot
+main.load=ALT 3               ; load disk/tape/snapshot
+main.savesound=ALT 5          ; save WAV/VTX
 main.qsave1=ALT F2         ; quick save to qsave1.sna
 main.qsave2=CONTROL F2     ; quick save to qsave2.sna
 main.qsave3=SHIFT F2       ; quick save to qsave3.sna
@@ -623,9 +623,9 @@ main.autofire=ALT NUMLOCK  ; toggle autofire mode
 main.saveall=F9            ; quick save cmos and disks
 main.xtkbd=ALT CONTROL Z   ; enable/disable ATM XT keyboard (emulation controls blocked!)
 main.pastetext=ALT SHIFT INS ; copy text from clipboard to keyboard buffer
-main.size1=ALT 1           ; set normal window size (in windowed mode)
-main.size2=ALT 2           ; set double window size (in windowed mode)
-main.sizem=ALT 3           ; maximize window (in windowed mode)
+main.size1=                ; set normal window size (in windowed mode)
+main.size2=                ; set double window size (in windowed mode)
+main.sizem=                ; maximize window (in windowed mode)
 main.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
 
 ; keys in all monitor windows
