--- a/z80/Makefile
+++ b/z80/Makefile
@@ -1,7 +1,7 @@
 CXX=icl -c
 
-CFLAGS_COMMON=-nologo -W3 -Wcheck -Qms0 -EHa- -GR- -Zi -MT -Oi \
-         -D_CRT_SECURE_NO_DEPRECATE -DUSE_SND_EXTERNAL_BUFFER
+CFLAGS_COMMON=-nologo -W3 -Wcheck -Qms0 -EHa- -GR- -Zi -MT -MP -Oi \
+         -D_CRT_SECURE_NO_DEPRECATE -DUSE_SND_EXTERNAL_BUFFER -D_PREFIX_
 
 !ifdef SSE1
 CFLAGS_COMMON=$(CFLAGS_COMMON) -QxK
